@@ -1,3 +1,7 @@
+2009-01-21  Dmitry Dulepov  <dmitry@typo3.org>
+
+	* Changed "Last-modified" handling to provide more realistic modification dates
+
 2009-01-20  Dmitry Dulepov  <dmitry@typo3.org>
 
 	* Released version 2.2
